--- a/style.css
+++ b/style.css
@@ -15,11 +15,19 @@ header, main, footer {
 .hold-height {
     min-height: 300px !important;
 }
+.main-container {
+    margin-left:0px !important;
+}
 .send-right {
     text-align:right;
 }
 #sidebar-div {
+    margin-top: 12vh;
     max-width: 20vw !important;
+    box-shadow: 5px 5px 2px grey;
+}
+.sidenav-container {
+    z-index: 10 !important;
 }
 .top-line {
     border-top: 5px solid black;
